[package]
authors = ['xtony77 <xtony77@gmail.com>']
description = 'chip money pallet for polkadot games'
edition = '2018'
homepage = 'https://github.com/xtony77/pallet-dotchip'
license = 'MIT'
name = 'pallet-dotchip'
repository = 'https://github.com/xtony77/pallet-dotchip'
version = '1.0.2'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

# alias "parity-scale-code" to "codec"
[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '2.0.0'

[dependencies]
frame-support = { default-features = false, version = '3.0.0' }
frame-system = { default-features = false, version = '3.0.0' }
sp-runtime = { default-features = false, version = '3.0.0' }
pallet-balances = { default-features = false, version = '3.0.0' }

[dev-dependencies]
serde = { version = "1.0.119" }
sp-core = { default-features = false, version = '3.0.0' }
sp-io = { default-features = false, version = '3.0.0' }

[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    "pallet-balances/std",
]
